--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/biriyani.html">Biriyani</a>
+       <img src="images/recipe.jpg" alt="Recipes">
+
+       <h4> Recipes</h4>
+       <ul>
+            <li><a href="recipes/biriyani.html">Biriyani</a></li>
+            <li><a href="recipes/Creamy-Au-Gratin-Potatoes.html">Creamy Au Gratin Potatoes</a></li>
+            <li><a href="recipes/mashed-potato.html">Mashed Potato</a></li>
+
+       </ul>
     </body>
-</html>
+</html> 
