--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <body>
         <h1>Odin Recipes</h1>
-       <img src="images/recipe.jpg" alt="Recipes" width="500" height=300>
+       <img src="images/recipe.jpg" alt="Recipes" width="500" height="300">
 
        <h4> Recipes</h4>
        <ul>
