--- a/recipes/Creamy-Au-Gratin-Potatoes.html
+++ b/recipes/Creamy-Au-Gratin-Potatoes.html
@@ -7,7 +7,7 @@
 
     <body>
         <h1>Creamy Au Gratin Potatoes</h1>
-        <img src="../images/potato1.jpg" alt="Creamy Au Gratin Potatoes ">
+        <img src="../images/potato1.jpg" alt="Creamy Au Gratin Potatoes " width="500" height="300">
         <h4>Ingrediants</h4>
         <ul>
             <li>4 russet potatoes, sliced into 1/4 inch slices</li>
