--- a/recipes/mashed-potato.html
+++ b/recipes/mashed-potato.html
@@ -5,7 +5,7 @@
   <title>Mashed Potato</title>
 </head>
 <body>
-  <h1>Mashed Potato</h1><img src="../images/mashpotato.png" alt="Mashed Potato">
+  <h1>Mashed Potato</h1><img src="../images/mashpotato.png" alt="Mashed Potato" width="500" height="300">
   <h4>Ingrediants</h4>
   <ul>
     <li>5 pounds Yukon Gold potatoes</li>
